# inbox-forge

./: .gitignore  README.md  USAGE.md  pyproject.toml
src/: main.py  paths.py
src/classes/: email_parser.py  file_handler.py  json_organizer.py  search_engine.py
src/cli/: ingest.py  search.py
src/config/: paths.py  settings.py
src/core/: email_parser.py  json_organizer.py  search_engine.py
src/scripts/: ingest.py  json_organizer.py  main.py  search.py  search_engine.py
src/types/: emails.py  errors.py  search.py
src/utils/: email_parser.py  file_handler.py
